# university-notes-AIRO

./: README.md
Artificial intelligence/Exams/: 1.xopp
Artificial intelligence/Exams/xournal++/: 1.xopp  1_old.xopp  2.xopp  2_old.xopp  3.xopp  3_old.xopp  4.xopp  4_old.xopp  5.xopp  6.xopp
Artificial intelligence/Lab Exercises/: Lab2 - Informed Search.xopp  Lab4 - CSP.xopp  Lab5 - Propositional Logic.xopp  Lab6 - FOL.xopp  Lab8 - PDDL.xopp
Artificial intelligence/LatexSourceFile/: ArtificialIntelligence.tex
Artificial intelligence/LatexSourceFile/images/: TG_dec.eps  TG_dec.ipe  TG_dec.ipe.autosave.ipe  conflict_graph.eps  conflict_graph.ipe  cutofftree.eps  cutofftree.ipe  grid_properties.eps  h_distance.ipe  impl_graph.eps  impl_graph.ipe  iterative_deep.ipe  missionaries.eps  missionaries.ipe  unifier.eps  unifier.ipe  unifier.ipe.autosave.ipe  vacuum.ipe  vacuum.ipe.autosave.ipe
Computer Vision/LatexSourceFile/: ComputerVision.tex
Machine Learning/LatexSourceFile/: MachineLearning.tex
Machine Learning/exercise/: cherry_lime_candies.py
Medical Robotics/LatexSourceFile/: MedicalRobotics.tex
Neuroengineering/LatexSourceFile/: Neuroengineering.tex
Robot Programming/in_class_code/simulator/: CMakeLists.txt  dmap.h  grid.cpp  grid.h  grid_main.cpp  grid_mapping.h  laser_scanner.cpp  laser_scanner.h  laser_scanner_main.cpp  linalg.cpp  linalg.h  linalg_main.cpp  simulator_main.cpp  unicycle_main.cpp  unicycle_profile.cpp  unicycle_robot.cpp  unicycle_robot.h  world_item.cpp  world_item.h
Robot Programming/in_class_code/vectort_matrix_lib/: CMakeLists.txt  mat_d.cpp  mat_d.h  mat_d_main.cpp  vec_d_main.cpp
Robotics 1/LatexSourceFile/: Robotics1.tex
Robotics 2/LatexSourceFile/: Robotics2.tex  convertSVG.py
Robotics 2/Midterms/: 19 aprile 2023.xopp  2016_04_13.xopp  2018_04_26.xopp  2019_04_29.xopp  2021_04_14.xopp  2022_04_13.xopp  2023_04_19.xopp  2024_04_24.xopp  2025_04_30.xopp  24 aprile 2024.xopp  26 aprile 2018.xopp  29 marzo 2017.xopp  a.py
Robotics 2/others/: RHF.xopp  additional notes.xopp  formulario.xopp
preamble/: preamble.tex  title.tex
(+575 files in other folders)
